--- a/nginx-proxy/conf.d/default.conf
+++ b/nginx-proxy/conf.d/default.conf
@@ -13,8 +13,8 @@ server {
 
     }
 
-    location /investment/ {
-        proxy_pass http://investment:8080/;
+    location /investor/ {
+        proxy_pass http://investors:8080/;
         proxy_set_header Host $host;
 
     }
